// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeNca output snapshot @0.10.0 — byte-identity pin for numbers-changing fixes compensatedSummation=false — every profile matches the committed snapshot 1`] = `
{
  "01_theoph.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.048456996965774914,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 1.0710008124334718,
      "tEnd": 24.37,
      "tStart": 9.05,
    },
    "status": "ok",
    "values": {
      "aucInf": 214.92363157522956,
      "aucLast": 147.23474853700378,
      "aumcInf": 4545.592801070954,
      "aumcLast": 1499.1290851603028,
      "cl": 1.4888637310597155,
      "cmax": 10.5,
      "halfLife": 14.304377571096984,
      "lambdaZ": 0.048456996965774914,
      "mrt": 21.149804550365896,
      "pctExtrap": 31.49438828206878,
      "pctExtrapAumc": 67.02016324895834,
      "tlag": 0,
      "tmax": 1.12,
      "vss": NaN,
      "vz": 30.72546431449925,
    },
  },
  "01_theoph.csv/10": {
    "lambdaZ": {
      "lambdaZ": 0.07495982377577666,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 1.5486244575098418,
      "tEnd": 23.7,
      "tStart": 9.38,
    },
    "status": "ok",
    "values": {
      "aucInf": 167.8600307322646,
      "aucLast": 135.57607009704728,
      "aumcInf": 2502.554000237453,
      "aumcLast": 1306.7406148785626,
      "cl": 1.906945915615594,
      "cmax": 10.21,
      "halfLife": 9.246915822978982,
      "lambdaZ": 0.07495982377577666,
      "mrt": 14.908575849297957,
      "pctExtrap": 19.232666939463375,
      "pctExtrapAumc": 47.783719561912605,
      "tlag": 0,
      "tmax": 3.55,
      "vss": NaN,
      "vz": 25.43957308810837,
    },
  },
  "01_theoph.csv/11": {
    "lambdaZ": {
      "lambdaZ": 0.09545855986427725,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.072649743445255,
      "tEnd": 24.08,
      "tStart": 9.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 86.90261725591137,
      "aucLast": 77.8934723324729,
      "aumcInf": 937.9535437809876,
      "aumcLast": 626.6357848949185,
      "cl": 3.679981226091856,
      "cmax": 8,
      "halfLife": 7.2612365150433895,
      "lambdaZ": 0.09545855986427725,
      "mrt": 10.793156447968606,
      "pctExtrap": 10.366943146152071,
      "pctExtrapAumc": 33.19117038900616,
      "tlag": 0,
      "tmax": 0.98,
      "vss": NaN,
      "vz": 38.55056300162128,
    },
  },
  "01_theoph.csv/12": {
    "lambdaZ": {
      "lambdaZ": 0.11025948945162659,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.405150777879297,
      "tEnd": 24.15,
      "tStart": 9.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 125.83153972141989,
      "aucLast": 115.2202081633021,
      "aumcInf": 1335.1375811190123,
      "aumcLast": 982.634302250035,
      "cl": 2.548248242927737,
      "cmax": 9.75,
      "halfLife": 6.286508163671891,
      "lambdaZ": 0.11025948945162659,
      "mrt": 10.610516123977272,
      "pctExtrap": 8.432966473755586,
      "pctExtrapAumc": 26.40201907683068,
      "tlag": 0,
      "tmax": 3.52,
      "vss": NaN,
      "vz": 23.111373502647254,
    },
  },
  "01_theoph.csv/2": {
    "lambdaZ": {
      "lambdaZ": 0.10408644368843227,
      "pointsUsed": [
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.5933494832181117,
      "tEnd": 24.3,
      "tStart": 7.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 97.37793463150979,
      "aucLast": 88.73127548832665,
      "aumcInf": 1009.464449904845,
      "aumcLast": 716.2787279050584,
      "cl": 3.2713776607141103,
      "cmax": 8.33,
      "halfLife": 6.659341562622518,
      "lambdaZ": 0.10408644368843227,
      "mrt": 10.366459852786814,
      "pctExtrap": 8.879485045460427,
      "pctExtrapAumc": 29.043689654194665,
      "tlag": 0,
      "tmax": 1.92,
      "vss": NaN,
      "vz": 31.429430623131935,
    },
  },
  "01_theoph.csv/3": {
    "lambdaZ": {
      "lambdaZ": 0.10244431410943383,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.242063862662874,
      "tEnd": 24.17,
      "tStart": 9,
    },
    "status": "ok",
    "values": {
      "aucInf": 106.12766853392468,
      "aucLast": 95.87819779337815,
      "aumcInf": 1158.6515817112627,
      "aumcLast": 810.8726829967108,
      "cl": 3.0092529536528176,
      "cmax": 8.2,
      "halfLife": 6.766087377182363,
      "lambdaZ": 0.10244431410943383,
      "mrt": 10.917526011050446,
      "pctExtrap": 9.657680115030692,
      "pctExtrapAumc": 30.015830833364266,
      "tlag": 0,
      "tmax": 1.02,
      "vss": NaN,
      "vz": 29.374523904159783,
    },
  },
  "01_theoph.csv/4": {
    "lambdaZ": {
      "lambdaZ": 0.09928702053062312,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.2388551442133875,
      "tEnd": 24.65,
      "tStart": 9.02,
    },
    "status": "ok",
    "values": {
      "aucInf": 114.21620463815569,
      "aucLast": 102.63362321055303,
      "aumcInf": 1313.9510001936083,
      "aumcLast": 911.7828092840318,
      "cl": 2.800653383759341,
      "cmax": 8.6,
      "halfLife": 6.981246660998934,
      "lambdaZ": 0.09928702053062312,
      "mrt": 11.504068134257217,
      "pctExtrap": 10.140926556172154,
      "pctExtrapAumc": 30.607548595824174,
      "tlag": 0,
      "tmax": 1.07,
      "vss": NaN,
      "vz": 28.207648580768264,
    },
  },
  "01_theoph.csv/5": {
    "lambdaZ": {
      "lambdaZ": 0.08661888398182008,
      "pointsUsed": [
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.1656371135958508,
      "tEnd": 24.35,
      "tStart": 7.02,
    },
    "status": "ok",
    "values": {
      "aucInf": 136.30473158992334,
      "aucLast": 118.17935375280507,
      "aumcInf": 1689.4872798131532,
      "aumcLast": 1038.8799844230825,
      "cl": 2.347357984333198,
      "cmax": 11.4,
      "halfLife": 8.0022640410078,
      "lambdaZ": 0.08661888398182008,
      "mrt": 12.39492760160391,
      "pctExtrap": 13.29768792740738,
      "pctExtrapAumc": 38.50915618980119,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 27.099841009564045,
    },
  },
  "01_theoph.csv/6": {
    "lambdaZ": {
      "lambdaZ": 0.08779574005617023,
      "pointsUsed": [
        4,
        5,
        6,
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.7637752872024546,
      "tEnd": 23.85,
      "tStart": 2.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 82.17588332456042,
      "aucLast": 71.69701499437265,
      "aumcInf": 987.9420173379583,
      "aumcLast": 618.6659190962275,
      "cl": 3.8940865258014163,
      "cmax": 6.44,
      "halfLife": 7.894997867965819,
      "lambdaZ": 0.08779574005617023,
      "mrt": 12.02228655621504,
      "pctExtrap": 12.7517562406973,
      "pctExtrapAumc": 37.37831692154942,
      "tlag": 0,
      "tmax": 1.15,
      "vss": NaN,
      "vz": 44.3539347502515,
    },
  },
  "01_theoph.csv/7": {
    "lambdaZ": {
      "lambdaZ": 0.08833649613791328,
      "pointsUsed": [
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.1971108534083093,
      "tEnd": 24.22,
      "tStart": 6.98,
    },
    "status": "ok",
    "values": {
      "aucInf": 100.9876292320485,
      "aucLast": 87.96922743575595,
      "aumcInf": 1258.305326803087,
      "aumcLast": 795.6267784884353,
      "cl": 3.166427437020382,
      "cmax": 7.09,
      "halfLife": 7.846668261301485,
      "lambdaZ": 0.08833649613791328,
      "mrt": 12.459994717885333,
      "pctExtrap": 12.891085665927438,
      "pctExtrapAumc": 36.76997454108819,
      "tlag": 0,
      "tmax": 3.48,
      "vss": NaN,
      "vz": 35.84506489907492,
    },
  },
  "01_theoph.csv/8": {
    "lambdaZ": {
      "lambdaZ": 0.08145053994530187,
      "pointsUsed": [
        5,
        6,
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.41949569226983,
      "tEnd": 24.12,
      "tStart": 3.53,
    },
    "status": "ok",
    "values": {
      "aucInf": 102.15330029311731,
      "aucLast": 86.80656347787412,
      "aumcInf": 1314.9431383032354,
      "aumcLast": 756.3619816184972,
      "cl": 3.1263307116228094,
      "cmax": 7.56,
      "halfLife": 8.510037883425063,
      "lambdaZ": 0.08145053994530187,
      "mrt": 12.872253118892441,
      "pctExtrap": 15.023241315951093,
      "pctExtrapAumc": 42.479491349376154,
      "tlag": 0,
      "tmax": 2.02,
      "vss": NaN,
      "vz": 38.38317970294976,
    },
  },
  "01_theoph.csv/9": {
    "lambdaZ": {
      "lambdaZ": 0.08245863418031794,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 1.859386416600894,
      "tEnd": 24.43,
      "tStart": 8.8,
    },
    "status": "ok",
    "values": {
      "aucInf": 97.5200039392502,
      "aucLast": 83.937436011302,
      "aumcInf": 1219.9213281427158,
      "aumcLast": 723.3794155224704,
      "cl": 2.7465134247415555,
      "cmax": 9.03,
      "halfLife": 8.405998807161817,
      "lambdaZ": 0.08245863418031794,
      "mrt": 12.509447076136935,
      "pctExtrap": 13.927981315925114,
      "pctExtrapAumc": 40.70278149626351,
      "tlag": 0,
      "tmax": 0.63,
      "vss": NaN,
      "vz": 33.307772461226634,
    },
  },
  "02_indometh.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.15832048240029675,
      "pointsUsed": [
        9,
        10,
        11,
      ],
      "spanRatio": 0.6852245244901696,
      "tEnd": 8,
      "tStart": 5,
    },
    "status": "ok",
    "values": {
      "aucInf": 2.325713542839158,
      "aucLast": 2.009898436404728,
      "aumcInf": 7.826100545952855,
      "aumcLast": 3.30479606543361,
      "cl": 10.749389182934708,
      "cmax": 1.5,
      "halfLife": 4.378127012065282,
      "lambdaZ": 0.15832048240029675,
      "mrt": 3.365032022129001,
      "pctExtrap": 13.579277955654536,
      "pctExtrapAumc": 57.77212360065277,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 36.172038818902394,
      "vz": 67.89638977827268,
    },
  },
  "02_indometh.csv/2": {
    "lambdaZ": {
      "lambdaZ": 0.3022800198199119,
      "pointsUsed": [
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 3.1617096702665326,
      "tEnd": 8,
      "tStart": 0.75,
    },
    "status": "ok",
    "values": {
      "aucInf": 3.467543050443068,
      "aucLast": 3.202887781306652,
      "aumcInf": 9.405941034955841,
      "aumcLast": 6.413168738343652,
      "cl": 7.209715823659523,
      "cmax": 2.03,
      "halfLife": 2.2930631702780047,
      "lambdaZ": 0.3022800198199119,
      "mrt": 2.7125664766451827,
      "pctExtrap": 7.632357126830756,
      "pctExtrapAumc": 31.81789345148962,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 19.556833449397132,
      "vz": 23.851116021346115,
    },
  },
  "02_indometh.csv/3": {
    "lambdaZ": {
      "lambdaZ": 0.4218926487181648,
      "pointsUsed": [
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 4.564968240699043,
      "tEnd": 8,
      "tStart": 0.5,
    },
    "status": "ok",
    "values": {
      "aucInf": 3.6640187700883406,
      "aucLast": 3.47439707309252,
      "aumcInf": 7.021727760914762,
      "aumcLast": 5.055299335303513,
      "cl": 6.823109151102204,
      "cmax": 2.72,
      "halfLife": 1.6429468080705658,
      "lambdaZ": 0.4218926487181648,
      "mrt": 1.916400597681836,
      "pctExtrap": 5.175238144078847,
      "pctExtrapAumc": 28.0049083725096,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 13.075810455220669,
      "vz": 16.172619200246405,
    },
  },
  "02_indometh.csv/4": {
    "lambdaZ": {
      "lambdaZ": 0.4554454566187095,
      "pointsUsed": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 5.092283987858969,
      "tEnd": 8,
      "tStart": 0.25,
    },
    "status": "ok",
    "values": {
      "aucInf": 2.9020789131883826,
      "aucLast": 2.7483832313394743,
      "aumcInf": 5.971999608286012,
      "aumcLast": 4.4049718303661605,
      "cl": 8.61451419752526,
      "cmax": 1.85,
      "halfLife": 1.521910407682989,
      "lambdaZ": 0.4554454566187095,
      "mrt": 2.0578350165278056,
      "pctExtrap": 5.2960545335429865,
      "pctExtrapAumc": 26.2395827311448,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 17.727248966043412,
      "vz": 18.914480476939243,
    },
  },
  "02_indometh.csv/5": {
    "lambdaZ": {
      "lambdaZ": 0.25274778416833205,
      "pointsUsed": [
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 2.552465823707287,
      "tEnd": 8,
      "tStart": 1,
    },
    "status": "ok",
    "values": {
      "aucInf": 2.6357644530491693,
      "aucLast": 2.3983736478342776,
      "aumcInf": 6.585665774060894,
      "aumcLast": 3.747299425665516,
      "cl": 9.484914318151187,
      "cmax": 2.05,
      "halfLife": 2.7424461220926224,
      "lambdaZ": 0.25274778416833205,
      "mrt": 2.498579023797936,
      "pctExtrap": 9.006525789520662,
      "pctExtrapAumc": 43.09915573873964,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 23.69880795785326,
      "vz": 37.52719078966943,
    },
  },
  "02_indometh.csv/6": {
    "lambdaZ": {
      "lambdaZ": 0.35352052140173246,
      "pointsUsed": [
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 3.697661697321011,
      "tEnd": 8,
      "tStart": 0.75,
    },
    "status": "ok",
    "values": {
      "aucInf": 3.545408724950614,
      "aucLast": 3.290826615705176,
      "aumcInf": 8.347211322527542,
      "aumcLast": 5.590420555810082,
      "cl": 7.05137318133842,
      "cmax": 2.31,
      "halfLife": 1.9606985693831025,
      "lambdaZ": 0.35352052140173246,
      "mrt": 2.3543720823454044,
      "pctExtrap": 7.1806138303273865,
      "pctExtrapAumc": 33.02648825096118,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 16.601556160342273,
      "vz": 19.9461495286872,
    },
  },
  "03_rat_simple.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.3990941128476368,
      "pointsUsed": [
        4,
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 5.757710974532659,
      "tEnd": 12,
      "tStart": 2,
    },
    "status": "ok",
    "values": {
      "aucInf": 10.434645118554549,
      "aucLast": 10.322390894405912,
      "aumcInf": 28.832604683039605,
      "aumcLast": 27.204281429880687,
      "cl": 0.23958649015811576,
      "cmax": 3.486,
      "halfLife": 1.7368013163966913,
      "lambdaZ": 0.3990941128476368,
      "mrt": 2.763161023250364,
      "pctExtrap": 1.0757838227677783,
      "pctExtrapAumc": 5.647506602539996,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.60032579395523,
    },
  },
  "03_rat_simple.csv/2": {
    "lambdaZ": {
      "lambdaZ": 0.29112455406435483,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 2.5200237025779337,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 22.565776739727823,
      "aucLast": 21.673375201029135,
      "aumcInf": 95.8846998103585,
      "aumcLast": 82.11052142960861,
      "cl": 0.11078723452929783,
      "cmax": 4.1329,
      "halfLife": 2.38092998643708,
      "lambdaZ": 0.29112455406435483,
      "mrt": 4.249120290264602,
      "pctExtrap": 3.9546679424847153,
      "pctExtrapAumc": 14.365355899317164,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.3805492631336333,
    },
  },
  "03_rat_simple.csv/3": {
    "lambdaZ": {
      "lambdaZ": 0.42430911584481673,
      "pointsUsed": [
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 4.8971892578663825,
      "tEnd": 12,
      "tStart": 4,
    },
    "status": "ok",
    "values": {
      "aucInf": 17.03925194462013,
      "aucLast": 16.88252658210324,
      "aumcInf": 52.969087118691036,
      "aumcLast": 50.71901676463797,
      "cl": 0.1467200560285943,
      "cmax": 4.1347,
      "halfLife": 1.6335901225686869,
      "lambdaZ": 0.42430911584481673,
      "mrt": 3.1086509719351367,
      "pctExtrap": 0.9197901587831998,
      "pctExtrapAumc": 4.247893396786688,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.3457857739786446,
    },
  },
  "03_rat_simple.csv/4": {
    "lambdaZ": {
      "lambdaZ": 0.7170357708011986,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 6.2067837040493075,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 5.206918267289538,
      "aucLast": 5.202315986434968,
      "aumcInf": 13.36868745184408,
      "aumcLast": 13.307041600054594,
      "cl": 0.4801304479283435,
      "cmax": 1.5992,
      "halfLife": 0.9666842419666724,
      "lambdaZ": 0.7170357708011986,
      "mrt": 2.5674855577871694,
      "pctExtrap": 0.08838780672787011,
      "pctExtrapAumc": 0.46112119840891425,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.6696045964232121,
    },
  },
  "03_rat_simple.csv/5": {
    "lambdaZ": {
      "lambdaZ": 0.22079453377669042,
      "pointsUsed": [
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 2.5483134314801763,
      "tEnd": 12,
      "tStart": 4,
    },
    "status": "ok",
    "values": {
      "aucInf": 20.66668769629774,
      "aucLast": 18.816551313785872,
      "aumcInf": 108.58250311096663,
      "aumcLast": 78.00141821263796,
      "cl": 0.12096761884333568,
      "cmax": 3.2928,
      "halfLife": 3.1393312538298073,
      "lambdaZ": 0.22079453377669042,
      "mrt": 5.253986739753088,
      "pctExtrap": 8.952263709115336,
      "pctExtrapAumc": 28.163915936876236,
      "tlag": 0,
      "tmax": 2,
      "vss": NaN,
      "vz": 0.5478741560046103,
    },
  },
  "03_rat_simple.csv/6": {
    "lambdaZ": {
      "lambdaZ": 0.3016729259818134,
      "pointsUsed": [
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 3.481776274275404,
      "tEnd": 12,
      "tStart": 4,
    },
    "status": "ok",
    "values": {
      "aucInf": 18.03036147454675,
      "aucLast": 17.356121320784123,
      "aumcInf": 77.03076833332176,
      "aumcLast": 66.70488262904605,
      "cl": 0.13865501274221376,
      "cmax": 3.275,
      "halfLife": 2.2976777856483293,
      "lambdaZ": 0.3016729259818134,
      "mrt": 4.272280865919698,
      "pctExtrap": 3.7394710844507775,
      "pctExtrapAumc": 13.404884733324101,
      "tlag": 0,
      "tmax": 2,
      "vss": NaN,
      "vz": 0.4596203397800859,
    },
  },
  "03_rat_simple.csv/7": {
    "lambdaZ": {
      "lambdaZ": 0.3317333753802774,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 2.871540573350899,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 14.782746899037019,
      "aucLast": 14.373080552248085,
      "aumcInf": 57.86173857627538,
      "aumcLast": 51.710815882862704,
      "cl": 0.16911606598384335,
      "cmax": 3.2913,
      "halfLife": 2.0894707376529924,
      "lambdaZ": 0.3317333753802774,
      "mrt": 3.9141398396021123,
      "pctExtrap": 2.7712464373966914,
      "pctExtrapAumc": 10.630380014081865,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.5097951503673086,
    },
  },
  "03_rat_simple.csv/8": {
    "lambdaZ": {
      "lambdaZ": 0.3167332938445748,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 2.7416973138839698,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 9.600236022335409,
      "aucLast": 9.36091795419068,
      "aumcInf": 35.256815565260496,
      "aumcLast": 31.629416455432413,
      "cl": 0.2604102643084639,
      "cmax": 2.0066,
      "halfLife": 2.1884253851130713,
      "lambdaZ": 0.3167332938445748,
      "mrt": 3.6724946640097,
      "pctExtrap": 2.4928352551743838,
      "pctExtrapAumc": 10.288504652706806,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.822175216086537,
    },
  },
  "04_iv_infusion.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.19999999999218687,
      "pointsUsed": [
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
      ],
      "spanRatio": 6.492127683746716,
      "tEnd": 24,
      "tStart": 1.5,
    },
    "status": "ok",
    "values": {
      "aucInf": 49.990559286826056,
      "aucLast": 49.53503711280826,
      "aumcInf": 275.0898400883637,
      "aumcLast": 261.8796970417587,
      "cl": 2.0003776998420753,
      "cmax": 9.0634623461,
      "halfLife": 3.465735902935118,
      "lambdaZ": 0.19999999999218687,
      "mrt": 5.002835815658853,
      "pctExtrap": 0.9112163986887766,
      "pctExtrapAumc": 4.802119570232654,
      "tlag": NaN,
      "tmax": 1,
      "vss": 10.007561201615207,
      "vz": 10.001888499601106,
    },
  },
}
`;

exports[`computeNca output snapshot @0.10.0 — byte-identity pin for numbers-changing fixes compensatedSummation=true — every profile matches the committed snapshot 1`] = `
{
  "01_theoph.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.048456996965774914,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 1.0710008124334718,
      "tEnd": 24.37,
      "tStart": 9.05,
    },
    "status": "ok",
    "values": {
      "aucInf": 214.92363157522956,
      "aucLast": 147.23474853700378,
      "aumcInf": 4545.592801070954,
      "aumcLast": 1499.1290851603028,
      "cl": 1.4888637310597155,
      "cmax": 10.5,
      "halfLife": 14.304377571096984,
      "lambdaZ": 0.048456996965774914,
      "mrt": 21.149804550365896,
      "pctExtrap": 31.49438828206878,
      "pctExtrapAumc": 67.02016324895834,
      "tlag": 0,
      "tmax": 1.12,
      "vss": NaN,
      "vz": 30.72546431449925,
    },
  },
  "01_theoph.csv/10": {
    "lambdaZ": {
      "lambdaZ": 0.07495982377577666,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 1.5486244575098418,
      "tEnd": 23.7,
      "tStart": 9.38,
    },
    "status": "ok",
    "values": {
      "aucInf": 167.8600307322646,
      "aucLast": 135.57607009704728,
      "aumcInf": 2502.554000237453,
      "aumcLast": 1306.7406148785624,
      "cl": 1.906945915615594,
      "cmax": 10.21,
      "halfLife": 9.246915822978982,
      "lambdaZ": 0.07495982377577666,
      "mrt": 14.908575849297957,
      "pctExtrap": 19.232666939463375,
      "pctExtrapAumc": 47.78371956191261,
      "tlag": 0,
      "tmax": 3.55,
      "vss": NaN,
      "vz": 25.43957308810837,
    },
  },
  "01_theoph.csv/11": {
    "lambdaZ": {
      "lambdaZ": 0.09545855986427725,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.072649743445255,
      "tEnd": 24.08,
      "tStart": 9.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 86.90261725591137,
      "aucLast": 77.8934723324729,
      "aumcInf": 937.9535437809876,
      "aumcLast": 626.6357848949185,
      "cl": 3.679981226091856,
      "cmax": 8,
      "halfLife": 7.2612365150433895,
      "lambdaZ": 0.09545855986427725,
      "mrt": 10.793156447968606,
      "pctExtrap": 10.366943146152071,
      "pctExtrapAumc": 33.19117038900616,
      "tlag": 0,
      "tmax": 0.98,
      "vss": NaN,
      "vz": 38.55056300162128,
    },
  },
  "01_theoph.csv/12": {
    "lambdaZ": {
      "lambdaZ": 0.11025948945162659,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.405150777879297,
      "tEnd": 24.15,
      "tStart": 9.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 125.83153972141989,
      "aucLast": 115.2202081633021,
      "aumcInf": 1335.1375811190123,
      "aumcLast": 982.634302250035,
      "cl": 2.548248242927737,
      "cmax": 9.75,
      "halfLife": 6.286508163671891,
      "lambdaZ": 0.11025948945162659,
      "mrt": 10.610516123977272,
      "pctExtrap": 8.432966473755586,
      "pctExtrapAumc": 26.40201907683068,
      "tlag": 0,
      "tmax": 3.52,
      "vss": NaN,
      "vz": 23.111373502647254,
    },
  },
  "01_theoph.csv/2": {
    "lambdaZ": {
      "lambdaZ": 0.10408644368843227,
      "pointsUsed": [
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.5933494832181117,
      "tEnd": 24.3,
      "tStart": 7.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 97.37793463150977,
      "aucLast": 88.73127548832663,
      "aumcInf": 1009.464449904845,
      "aumcLast": 716.2787279050584,
      "cl": 3.271377660714111,
      "cmax": 8.33,
      "halfLife": 6.659341562622518,
      "lambdaZ": 0.10408644368843227,
      "mrt": 10.366459852786816,
      "pctExtrap": 8.879485045460429,
      "pctExtrapAumc": 29.043689654194665,
      "tlag": 0,
      "tmax": 1.92,
      "vss": NaN,
      "vz": 31.429430623131935,
    },
  },
  "01_theoph.csv/3": {
    "lambdaZ": {
      "lambdaZ": 0.10244431410943383,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.242063862662874,
      "tEnd": 24.17,
      "tStart": 9,
    },
    "status": "ok",
    "values": {
      "aucInf": 106.12766853392468,
      "aucLast": 95.87819779337815,
      "aumcInf": 1158.6515817112627,
      "aumcLast": 810.8726829967108,
      "cl": 3.0092529536528176,
      "cmax": 8.2,
      "halfLife": 6.766087377182363,
      "lambdaZ": 0.10244431410943383,
      "mrt": 10.917526011050446,
      "pctExtrap": 9.657680115030692,
      "pctExtrapAumc": 30.015830833364266,
      "tlag": 0,
      "tmax": 1.02,
      "vss": NaN,
      "vz": 29.374523904159783,
    },
  },
  "01_theoph.csv/4": {
    "lambdaZ": {
      "lambdaZ": 0.09928702053062312,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 2.2388551442133875,
      "tEnd": 24.65,
      "tStart": 9.02,
    },
    "status": "ok",
    "values": {
      "aucInf": 114.21620463815569,
      "aucLast": 102.63362321055303,
      "aumcInf": 1313.9510001936083,
      "aumcLast": 911.7828092840318,
      "cl": 2.800653383759341,
      "cmax": 8.6,
      "halfLife": 6.981246660998934,
      "lambdaZ": 0.09928702053062312,
      "mrt": 11.504068134257217,
      "pctExtrap": 10.140926556172154,
      "pctExtrapAumc": 30.607548595824174,
      "tlag": 0,
      "tmax": 1.07,
      "vss": NaN,
      "vz": 28.207648580768264,
    },
  },
  "01_theoph.csv/5": {
    "lambdaZ": {
      "lambdaZ": 0.08661888398182008,
      "pointsUsed": [
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.1656371135958508,
      "tEnd": 24.35,
      "tStart": 7.02,
    },
    "status": "ok",
    "values": {
      "aucInf": 136.30473158992336,
      "aucLast": 118.17935375280508,
      "aumcInf": 1689.4872798131532,
      "aumcLast": 1038.8799844230825,
      "cl": 2.3473579843331973,
      "cmax": 11.4,
      "halfLife": 8.0022640410078,
      "lambdaZ": 0.08661888398182008,
      "mrt": 12.394927601603907,
      "pctExtrap": 13.297687927407384,
      "pctExtrapAumc": 38.50915618980119,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 27.09984100956404,
    },
  },
  "01_theoph.csv/6": {
    "lambdaZ": {
      "lambdaZ": 0.08779574005617023,
      "pointsUsed": [
        4,
        5,
        6,
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.7637752872024546,
      "tEnd": 23.85,
      "tStart": 2.03,
    },
    "status": "ok",
    "values": {
      "aucInf": 82.17588332456042,
      "aucLast": 71.69701499437265,
      "aumcInf": 987.9420173379583,
      "aumcLast": 618.6659190962275,
      "cl": 3.8940865258014163,
      "cmax": 6.44,
      "halfLife": 7.894997867965819,
      "lambdaZ": 0.08779574005617023,
      "mrt": 12.02228655621504,
      "pctExtrap": 12.7517562406973,
      "pctExtrapAumc": 37.37831692154942,
      "tlag": 0,
      "tmax": 1.15,
      "vss": NaN,
      "vz": 44.3539347502515,
    },
  },
  "01_theoph.csv/7": {
    "lambdaZ": {
      "lambdaZ": 0.08833649613791328,
      "pointsUsed": [
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.1971108534083093,
      "tEnd": 24.22,
      "tStart": 6.98,
    },
    "status": "ok",
    "values": {
      "aucInf": 100.98762923204849,
      "aucLast": 87.96922743575594,
      "aumcInf": 1258.305326803087,
      "aumcLast": 795.6267784884353,
      "cl": 3.1664274370203827,
      "cmax": 7.09,
      "halfLife": 7.846668261301485,
      "lambdaZ": 0.08833649613791328,
      "mrt": 12.459994717885335,
      "pctExtrap": 12.891085665927438,
      "pctExtrapAumc": 36.76997454108819,
      "tlag": 0,
      "tmax": 3.48,
      "vss": NaN,
      "vz": 35.84506489907493,
    },
  },
  "01_theoph.csv/8": {
    "lambdaZ": {
      "lambdaZ": 0.08145053994530187,
      "pointsUsed": [
        5,
        6,
        7,
        8,
        9,
        10,
      ],
      "spanRatio": 2.41949569226983,
      "tEnd": 24.12,
      "tStart": 3.53,
    },
    "status": "ok",
    "values": {
      "aucInf": 102.15330029311731,
      "aucLast": 86.80656347787412,
      "aumcInf": 1314.9431383032354,
      "aumcLast": 756.3619816184972,
      "cl": 3.1263307116228094,
      "cmax": 7.56,
      "halfLife": 8.510037883425063,
      "lambdaZ": 0.08145053994530187,
      "mrt": 12.872253118892441,
      "pctExtrap": 15.023241315951093,
      "pctExtrapAumc": 42.479491349376154,
      "tlag": 0,
      "tmax": 2.02,
      "vss": NaN,
      "vz": 38.38317970294976,
    },
  },
  "01_theoph.csv/9": {
    "lambdaZ": {
      "lambdaZ": 0.08245863418031794,
      "pointsUsed": [
        8,
        9,
        10,
      ],
      "spanRatio": 1.859386416600894,
      "tEnd": 24.43,
      "tStart": 8.8,
    },
    "status": "ok",
    "values": {
      "aucInf": 97.52000393925019,
      "aucLast": 83.93743601130198,
      "aumcInf": 1219.9213281427158,
      "aumcLast": 723.3794155224704,
      "cl": 2.7465134247415555,
      "cmax": 9.03,
      "halfLife": 8.405998807161817,
      "lambdaZ": 0.08245863418031794,
      "mrt": 12.509447076136937,
      "pctExtrap": 13.927981315925116,
      "pctExtrapAumc": 40.70278149626351,
      "tlag": 0,
      "tmax": 0.63,
      "vss": NaN,
      "vz": 33.30777246122664,
    },
  },
  "02_indometh.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.15832048240029675,
      "pointsUsed": [
        9,
        10,
        11,
      ],
      "spanRatio": 0.6852245244901696,
      "tEnd": 8,
      "tStart": 5,
    },
    "status": "ok",
    "values": {
      "aucInf": 2.325713542839158,
      "aucLast": 2.009898436404728,
      "aumcInf": 7.826100545952855,
      "aumcLast": 3.3047960654336097,
      "cl": 10.749389182934708,
      "cmax": 1.5,
      "halfLife": 4.378127012065282,
      "lambdaZ": 0.15832048240029675,
      "mrt": 3.365032022129001,
      "pctExtrap": 13.579277955654536,
      "pctExtrapAumc": 57.77212360065277,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 36.172038818902394,
      "vz": 67.89638977827268,
    },
  },
  "02_indometh.csv/2": {
    "lambdaZ": {
      "lambdaZ": 0.3022800198199119,
      "pointsUsed": [
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 3.1617096702665326,
      "tEnd": 8,
      "tStart": 0.75,
    },
    "status": "ok",
    "values": {
      "aucInf": 3.467543050443068,
      "aucLast": 3.202887781306652,
      "aumcInf": 9.405941034955843,
      "aumcLast": 6.413168738343653,
      "cl": 7.209715823659523,
      "cmax": 2.03,
      "halfLife": 2.2930631702780047,
      "lambdaZ": 0.3022800198199119,
      "mrt": 2.712566476645183,
      "pctExtrap": 7.632357126830756,
      "pctExtrapAumc": 31.81789345148962,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 19.55683344939714,
      "vz": 23.851116021346115,
    },
  },
  "02_indometh.csv/3": {
    "lambdaZ": {
      "lambdaZ": 0.4218926487181648,
      "pointsUsed": [
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 4.564968240699043,
      "tEnd": 8,
      "tStart": 0.5,
    },
    "status": "ok",
    "values": {
      "aucInf": 3.66401877008834,
      "aucLast": 3.4743970730925198,
      "aumcInf": 7.021727760914762,
      "aumcLast": 5.055299335303513,
      "cl": 6.823109151102205,
      "cmax": 2.72,
      "halfLife": 1.6429468080705658,
      "lambdaZ": 0.4218926487181648,
      "mrt": 1.9164005976818363,
      "pctExtrap": 5.175238144078848,
      "pctExtrapAumc": 28.0049083725096,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 13.075810455220674,
      "vz": 16.17261920024641,
    },
  },
  "02_indometh.csv/4": {
    "lambdaZ": {
      "lambdaZ": 0.4554454566187095,
      "pointsUsed": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 5.092283987858969,
      "tEnd": 8,
      "tStart": 0.25,
    },
    "status": "ok",
    "values": {
      "aucInf": 2.9020789131883817,
      "aucLast": 2.7483832313394734,
      "aumcInf": 5.971999608286012,
      "aumcLast": 4.4049718303661605,
      "cl": 8.614514197525263,
      "cmax": 1.85,
      "halfLife": 1.521910407682989,
      "lambdaZ": 0.4554454566187095,
      "mrt": 2.0578350165278065,
      "pctExtrap": 5.296054533542987,
      "pctExtrapAumc": 26.2395827311448,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 17.727248966043422,
      "vz": 18.91448047693925,
    },
  },
  "02_indometh.csv/5": {
    "lambdaZ": {
      "lambdaZ": 0.25274778416833205,
      "pointsUsed": [
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 2.552465823707287,
      "tEnd": 8,
      "tStart": 1,
    },
    "status": "ok",
    "values": {
      "aucInf": 2.6357644530491697,
      "aucLast": 2.398373647834278,
      "aumcInf": 6.585665774060894,
      "aumcLast": 3.747299425665516,
      "cl": 9.484914318151187,
      "cmax": 2.05,
      "halfLife": 2.7424461220926224,
      "lambdaZ": 0.25274778416833205,
      "mrt": 2.4985790237979355,
      "pctExtrap": 9.00652578952066,
      "pctExtrapAumc": 43.09915573873964,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 23.69880795785325,
      "vz": 37.527190789669426,
    },
  },
  "02_indometh.csv/6": {
    "lambdaZ": {
      "lambdaZ": 0.35352052140173246,
      "pointsUsed": [
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "spanRatio": 3.697661697321011,
      "tEnd": 8,
      "tStart": 0.75,
    },
    "status": "ok",
    "values": {
      "aucInf": 3.545408724950614,
      "aucLast": 3.290826615705176,
      "aumcInf": 8.347211322527542,
      "aumcLast": 5.590420555810083,
      "cl": 7.05137318133842,
      "cmax": 2.31,
      "halfLife": 1.9606985693831025,
      "lambdaZ": 0.35352052140173246,
      "mrt": 2.3543720823454044,
      "pctExtrap": 7.1806138303273865,
      "pctExtrapAumc": 33.026488250961165,
      "tlag": NaN,
      "tmax": 0.25,
      "vss": 16.601556160342273,
      "vz": 19.9461495286872,
    },
  },
  "03_rat_simple.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.3990941128476368,
      "pointsUsed": [
        4,
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 5.757710974532659,
      "tEnd": 12,
      "tStart": 2,
    },
    "status": "ok",
    "values": {
      "aucInf": 10.43464511855455,
      "aucLast": 10.322390894405913,
      "aumcInf": 28.832604683039605,
      "aumcLast": 27.204281429880687,
      "cl": 0.2395864901581157,
      "cmax": 3.486,
      "halfLife": 1.7368013163966913,
      "lambdaZ": 0.3990941128476368,
      "mrt": 2.7631610232503636,
      "pctExtrap": 1.075783822767778,
      "pctExtrapAumc": 5.647506602539996,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.60032579395523,
    },
  },
  "03_rat_simple.csv/2": {
    "lambdaZ": {
      "lambdaZ": 0.29112455406435483,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 2.5200237025779337,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 22.565776739727823,
      "aucLast": 21.673375201029135,
      "aumcInf": 95.8846998103585,
      "aumcLast": 82.11052142960861,
      "cl": 0.11078723452929783,
      "cmax": 4.1329,
      "halfLife": 2.38092998643708,
      "lambdaZ": 0.29112455406435483,
      "mrt": 4.249120290264602,
      "pctExtrap": 3.9546679424847153,
      "pctExtrapAumc": 14.365355899317164,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.3805492631336333,
    },
  },
  "03_rat_simple.csv/3": {
    "lambdaZ": {
      "lambdaZ": 0.42430911584481673,
      "pointsUsed": [
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 4.8971892578663825,
      "tEnd": 12,
      "tStart": 4,
    },
    "status": "ok",
    "values": {
      "aucInf": 17.03925194462013,
      "aucLast": 16.88252658210324,
      "aumcInf": 52.96908711869105,
      "aumcLast": 50.719016764637985,
      "cl": 0.1467200560285943,
      "cmax": 4.1347,
      "halfLife": 1.6335901225686869,
      "lambdaZ": 0.42430911584481673,
      "mrt": 3.1086509719351376,
      "pctExtrap": 0.9197901587831998,
      "pctExtrapAumc": 4.247893396786688,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.3457857739786446,
    },
  },
  "03_rat_simple.csv/4": {
    "lambdaZ": {
      "lambdaZ": 0.7170357708011986,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 6.2067837040493075,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 5.206918267289537,
      "aucLast": 5.202315986434967,
      "aumcInf": 13.368687451844078,
      "aumcLast": 13.307041600054593,
      "cl": 0.4801304479283436,
      "cmax": 1.5992,
      "halfLife": 0.9666842419666724,
      "lambdaZ": 0.7170357708011986,
      "mrt": 2.5674855577871694,
      "pctExtrap": 0.08838780672787012,
      "pctExtrapAumc": 0.4611211984089143,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.6696045964232124,
    },
  },
  "03_rat_simple.csv/5": {
    "lambdaZ": {
      "lambdaZ": 0.22079453377669042,
      "pointsUsed": [
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 2.5483134314801763,
      "tEnd": 12,
      "tStart": 4,
    },
    "status": "ok",
    "values": {
      "aucInf": 20.66668769629774,
      "aucLast": 18.816551313785872,
      "aumcInf": 108.58250311096663,
      "aumcLast": 78.00141821263796,
      "cl": 0.12096761884333568,
      "cmax": 3.2928,
      "halfLife": 3.1393312538298073,
      "lambdaZ": 0.22079453377669042,
      "mrt": 5.253986739753088,
      "pctExtrap": 8.952263709115336,
      "pctExtrapAumc": 28.163915936876236,
      "tlag": 0,
      "tmax": 2,
      "vss": NaN,
      "vz": 0.5478741560046103,
    },
  },
  "03_rat_simple.csv/6": {
    "lambdaZ": {
      "lambdaZ": 0.3016729259818134,
      "pointsUsed": [
        5,
        6,
        7,
        8,
      ],
      "spanRatio": 3.481776274275404,
      "tEnd": 12,
      "tStart": 4,
    },
    "status": "ok",
    "values": {
      "aucInf": 18.03036147454675,
      "aucLast": 17.356121320784123,
      "aumcInf": 77.03076833332176,
      "aumcLast": 66.70488262904605,
      "cl": 0.13865501274221376,
      "cmax": 3.275,
      "halfLife": 2.2976777856483293,
      "lambdaZ": 0.3016729259818134,
      "mrt": 4.272280865919698,
      "pctExtrap": 3.7394710844507775,
      "pctExtrapAumc": 13.404884733324101,
      "tlag": 0,
      "tmax": 2,
      "vss": NaN,
      "vz": 0.4596203397800859,
    },
  },
  "03_rat_simple.csv/7": {
    "lambdaZ": {
      "lambdaZ": 0.3317333753802774,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 2.871540573350899,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 14.782746899037017,
      "aucLast": 14.373080552248084,
      "aumcInf": 57.861738576275386,
      "aumcLast": 51.71081588286271,
      "cl": 0.16911606598384335,
      "cmax": 3.2913,
      "halfLife": 2.0894707376529924,
      "lambdaZ": 0.3317333753802774,
      "mrt": 3.914139839602113,
      "pctExtrap": 2.7712464373966914,
      "pctExtrapAumc": 10.630380014081863,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.5097951503673087,
    },
  },
  "03_rat_simple.csv/8": {
    "lambdaZ": {
      "lambdaZ": 0.3167332938445748,
      "pointsUsed": [
        6,
        7,
        8,
      ],
      "spanRatio": 2.7416973138839698,
      "tEnd": 12,
      "tStart": 6,
    },
    "status": "ok",
    "values": {
      "aucInf": 9.600236022335409,
      "aucLast": 9.36091795419068,
      "aumcInf": 35.256815565260496,
      "aumcLast": 31.629416455432413,
      "cl": 0.2604102643084639,
      "cmax": 2.0066,
      "halfLife": 2.1884253851130713,
      "lambdaZ": 0.3167332938445748,
      "mrt": 3.6724946640097,
      "pctExtrap": 2.4928352551743838,
      "pctExtrapAumc": 10.288504652706806,
      "tlag": 0,
      "tmax": 1,
      "vss": NaN,
      "vz": 0.822175216086537,
    },
  },
  "04_iv_infusion.csv/1": {
    "lambdaZ": {
      "lambdaZ": 0.19999999999218687,
      "pointsUsed": [
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
      ],
      "spanRatio": 6.492127683746716,
      "tEnd": 24,
      "tStart": 1.5,
    },
    "status": "ok",
    "values": {
      "aucInf": 49.99055928682605,
      "aucLast": 49.535037112808254,
      "aumcInf": 275.0898400883637,
      "aumcLast": 261.8796970417587,
      "cl": 2.0003776998420757,
      "cmax": 9.0634623461,
      "halfLife": 3.465735902935118,
      "lambdaZ": 0.19999999999218687,
      "mrt": 5.0028358156588535,
      "pctExtrap": 0.9112163986887767,
      "pctExtrapAumc": 4.802119570232654,
      "tlag": NaN,
      "tmax": 1,
      "vss": 10.00756120161521,
      "vz": 10.001888499601106,
    },
  },
}
`;
